<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/main_menu_settings"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/main_menu_note"
        android:icon="@drawable/ic_baseline_create_24"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/main_menu_note"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/main_menu_login"
        android:icon="@drawable/ic_baseline_create_24"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/main_menu_login"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/main_menu_payment"
        android:icon="@drawable/ic_baseline_create_24"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/main_menu_payment"
        tools:ignore="MenuTitle" />

</menu>