<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/User"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="56dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/Email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:layout_marginLeft="56dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        android:layout_marginLeft="56dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        android:layout_marginLeft="56dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/OK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:layout_marginLeft="56dp" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/Clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOK"
        android:layout_marginLeft="56dp" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear"
        android:layout_marginLeft="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>